k8s/qbittorrent/qbittorrent-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent
  labels:
    name: qbittorrent
