k8s/qbittorrent/qbittorrent-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  serviceName: qbittorrent
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: ghcr.io/linuxserver/qbittorrent:5.1.1-r0-ls400
          ports:
            - containerPort: 9092
              name: http
            - containerPort: 6881
              name: torrent-tcp
            - containerPort: 6881
              name: torrent-udp
              protocol: UDP
          resources:
            requests:
              cpu: 10m
              memory: 150Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: qbittorrent-data
              mountPath: /config
            - name: qbittorrent-media
              mountPath: /media
          livenessProbe:
            httpGet:
              path: /
              port: 9092
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 9092
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: qbittorrent-data
          persistentVolumeClaim:
            claimName: qbittorrent-data-pvc
        - name: qbittorrent-media
          persistentVolumeClaim:
            claimName: qbittorrent-shared-media-pvc
